0.2 Renaming and documentation

0.1 Initial release
	Versioning the set of scripts used to build and administer my home network
	Working name: ghettobox (from an old thread on the hackmeeting mailinglist)